<resources>
    <string name="app_name">Just Chat</string>
    <string name="messages">Messages</string>
    <string name="calls">Calls</string>
    <string name="contacts">Contacts</string>
    <string name="settings">Settings</string>
    <string name="add_contacts">Add contacts</string>
    <string name="create_group">Create Group</string>
    <string name="log_out">Log out</string>
    <string name="search">Search</string>
    <string name="activities">Activities</string>
    <string name="previous_calls">Previous calls</string>
    <string name="username">Username</string>
    <string name="login">Login</string>
    <string name="notifications">Notifications</string>
    <string name="enabled">Enabled</string>
    <string name="call_minutes">24 minutes</string>
    <string name="online">Online</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign up</string>
    <string name="error">Error</string>
    <string name="incorrect_login">Login was incorrect</string>
    <string name="incorrect_username">Username was incorrect</string>
    <string name="incorrect_password">Password was incorrect</string>
    <string name="wrong_password">Password was wrong</string>
    <string name="login_min_len">Login minimal length is 4</string>
    <string name="login_max_len">Login maximal length is 16</string>
    <string name="username_min_len">Username minimal length is 4</string>
    <string name="username_max_len">Username maximal length is 16</string>
    <string name="password_min_len">Password minimal length is 6</string>
    <string name="password_max_len">Password maximum length is 16</string>
    <string name="taken_login">The login was already taken</string>
    <string name="not_allowed_login">Not allowed login</string>
    <string name="log_in">Log in</string>
    <string name="login_not_detected">No such login was detected</string>
    <string name="delete_chat">Delete chat</string>
    <string name="clear_history">Clear history</string>
    <string name="message">Message…</string>
    <string name="add_contact">Add contact</string>
    <string name="not_find_contact">User with this login not find</string>
    <string name="some_login_contact">You can not add you to your contacts</string>
    <string name="contact_contains">This user was already on your contacts</string>
    <string name="update_username">Update username</string>
    <string name="profile">Profile</string>
    <string name="update_password">Update password</string>
    <string name="new_username">New username</string>
    <string name="update">Update</string>
    <string name="new_password">New password</string>
    <string name="brush">Brush</string>
    <string name="eraser">Eraser</string>
    <string name="emoji">Emoji</string>
    <string name="filter">Filter</string>
    <string name="brush_size">Brush size</string>
    <string name="brush_color">Brush color</string>
    <string name="eraser_size">Eraser size</string>
    <string name="text">Text</string>
    <string name="text_color">Text color</string>
    <string name="add_text">Add text</string>
    <string name="scale">Scale</string>
    <string name="crop">Crop</string>
    <string name="brightness">Brightness</string>
    <string name="contrast">Contrast</string>
    <string name="saturation">Saturation</string>
    <string name="save">Save</string>
</resources>