<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/editor_brush"
        android:enabled="true"
        android:icon="@drawable/ic_brush"
        android:title="@string/brush" />
    <item
        android:id="@+id/editor_eraser"
        android:enabled="true"
        android:icon="@drawable/ic_eraser"
        android:title="@string/eraser" />
    <item
        android:id="@+id/editor_text"
        android:enabled="true"
        android:icon="@drawable/ic_text"
        android:title="@string/text" />
    <item
        android:id="@+id/editor_emoji"
        android:enabled="true"
        android:icon="@drawable/ic_emoji"
        android:title="@string/emoji" />
    <item
        android:id="@+id/editor_filter"
        android:enabled="true"
        android:icon="@drawable/ic_layers"
        android:title="@string/filter" />
</menu>