<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical"
    tools:context=".photoeditor.filter.EditImageFragment">

    <am.justchat.views.EditorFilterSeekbar
        android:id="@+id/editor_filter_brightness"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/brightness" />

    <am.justchat.views.EditorFilterSeekbar
        android:id="@+id/editor_filter_contrast"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/contrast" />

    <am.justchat.views.EditorFilterSeekbar
        android:id="@+id/editor_filter_saturation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/saturation" />

</LinearLayout>