<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".photoeditor.EditorFragment"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/photo_editor_controllers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10sp"
        android:background="@color/editorMenuBackground">

        <ImageView
            android:id="@+id/photo_editor_undo"
            android:layout_width="30sp"
            android:layout_height="30sp"
            android:layout_alignParentStart="true"
            android:src="@drawable/ic_undo"
            app:tint="@color/white" />

        <ImageView
            android:id="@+id/photo_editor_redo"
            android:layout_width="30sp"
            android:layout_height="30sp"
            android:layout_alignParentEnd="true"
            android:src="@drawable/ic_redo"
            app:tint="@color/white" />
    </RelativeLayout>

    <ja.burhanrashid52.photoeditor.PhotoEditorView
        android:id="@+id/photo_editor_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/photo_editor_controllers"
        android:layout_above="@id/photo_editor_menu" />

    <HorizontalScrollView
        android:id="@+id/photo_editor_menu"
        android:layout_width="match_parent"
        android:layout_height="80sp"
        android:layout_alignParentBottom="true"
        android:background="@color/editorMenuBackground"
        android:scrollbars="none"
        android:clipToPadding="false">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <am.justchat.views.EditorMenuItem
                android:id="@+id/editor_brush"
                android:layout_width="80sp"
                android:layout_height="80sp"
                app:title="@string/brush"
                app:icon="@drawable/ic_brush" />

            <am.justchat.views.EditorMenuItem
                android:id="@+id/editor_eraser"
                android:layout_width="80sp"
                android:layout_height="80sp"
                app:title="@string/eraser"
                app:icon="@drawable/ic_eraser" />

            <am.justchat.views.EditorMenuItem
                android:id="@+id/editor_text"
                android:layout_width="80sp"
                android:layout_height="80sp"
                app:icon="@drawable/ic_text"
                app:title="@string/text" />

            <am.justchat.views.EditorMenuItem
                android:id="@+id/editor_emoji"
                android:layout_width="80sp"
                android:layout_height="80sp"
                app:icon="@drawable/ic_emoji"
                app:title="@string/emoji" />

            <am.justchat.views.EditorMenuItem
                android:id="@+id/editor_filter"
                android:layout_width="80sp"
                android:layout_height="80sp"
                app:icon="@drawable/ic_star"
                app:title="@string/filter" />

            <am.justchat.views.EditorMenuItem
                android:id="@+id/editor_layers"
                android:layout_width="80sp"
                android:layout_height="80sp"
                app:icon="@drawable/ic_layers"
                app:title="Layers" />

            <am.justchat.views.EditorMenuItem
                android:id="@+id/editor_crop"
                android:layout_width="80sp"
                android:layout_height="80sp"
                app:icon="@drawable/ic_crop"
                app:title="@string/crop" />

            <am.justchat.views.EditorMenuItem
                android:id="@+id/editor_save"
                android:layout_width="80sp"
                android:layout_height="80sp"
                app:icon="@drawable/ic_accept"
                app:title="@string/save" />

        </LinearLayout>
    </HorizontalScrollView>
</RelativeLayout>
